[gd_scene load_steps=8 format=3 uid="uid://buv6ydu0m6frc"]

[ext_resource type="Script" path="res://objects/NPC/skelet/enemy.gd" id="1_qq4jb"]
[ext_resource type="SpriteFrames" uid="uid://corjwtckytv3e" path="res://objects/NPC/skelet/skeleton1.anim.tres" id="2_1keit"]
[ext_resource type="Gradient" uid="uid://yfu4til0513s" path="res://shared/textures/gradients/explosion.tres" id="3_ajs83"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdvlc"]
size = Vector2(7.74, 7.61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_deoas"]
size = Vector2(11.5, 7.66667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0j42m"]
size = Vector2(66.1667, 7.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5eafb"]
size = Vector2(34.75, 7.33333)

[node name="enemy" type="CharacterBody2D"]
z_index = 9
rotation = 3.14159
scale = Vector2(0.85, -0.8)
collision_layer = 536870912
collision_mask = 536870913
script = ExtResource("1_qq4jb")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(-1.24, 0.365)
shape = SubResource("RectangleShape2D_kdvlc")

[node name="asprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -0.03)
sprite_frames = ExtResource("2_1keit")
animation = &"attack"

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collider" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0.416667, 0.333333)
shape = SubResource("RectangleShape2D_deoas")

[node name="FOV" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1073741824

[node name="collider" type="CollisionShape2D" parent="FOV"]
position = Vector2(27.9167, 0.25)
shape = SubResource("RectangleShape2D_0j42m")

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1073741824

[node name="collider" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(22.9583, 0.333333)
shape = SubResource("RectangleShape2D_5eafb")
debug_color = Color(0.980392, 0, 0, 0.419608)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -1.425
offset_top = -7.31
offset_right = 64.575
offset_bottom = 15.69
scale = Vector2(0.22, 0.22)

[node name="pistolParticle" type="CPUParticles2D" parent="."]
top_level = true
position = Vector2(-4.78, 0.365)
emitting = false
amount = 30
lifetime = 0.3
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
randomness = 0.32
lifetime_randomness = 0.78
fract_delta = false
direction = Vector2(0, 0)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_max = 49.49
scale_amount_min = 0.5
scale_amount_max = 2.5
color_initial_ramp = ExtResource("3_ajs83")

[node name="HitBox2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="collider" type="CollisionShape2D" parent="HitBox2"]
position = Vector2(0.416667, 0.333333)
shape = SubResource("RectangleShape2D_deoas")

[connection signal="animation_finished" from="asprite" to="." method="_on_animation_end"]
[connection signal="animation_looped" from="asprite" to="." method="_on_animation_end"]
[connection signal="frame_changed" from="asprite" to="." method="_on_frame_changed"]
[connection signal="body_entered" from="HitBox" to="." method="_on_collision"]
[connection signal="body_entered" from="FOV" to="." method="_on_fov_entered"]
[connection signal="body_exited" from="FOV" to="." method="_on_fov_exited"]
[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_enter"]
[connection signal="body_exited" from="AttackBox" to="." method="_on_attack_box_exited"]
[connection signal="body_entered" from="HitBox2" to="." method="_on_collision"]
